[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
async-trait = "0.1.80"
axum = "0.7.5"
axum-macros = "0.4.1"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = "0.5.2"
